--- a/public/assets/css/style.css
+++ b/public/assets/css/style.css
@@ -595,8 +595,8 @@ button:focus {
 
 .content-header,
 .content-footer {
-  font-size: 11px;
-  color: #A1A1A2;
+  font-size: 12px;
+  color: #01579B;
   padding-left: 0;
   padding-right: 0;
   line-height: 1.4em;
