--- a/public/assets/css/style.css
+++ b/public/assets/css/style.css
@@ -5694,7 +5694,7 @@ textarea,
   align-items: center;
   justify-content: center;
   font-size: 20px;
-  color: #A1A1A2;
+  color: #263238;
 }
 
 .notification-dialog.android-style .notification-header .close-button:hover,
