--- a/public/assets/sass/framework/_timeline.scss
+++ b/public/assets/sass/framework/_timeline.scss
@@ -36,7 +36,7 @@
         height: 12px;
         border-radius: 100%;
         position: absolute;
-        background: $colorLight;
+        background: #01579B ;
         left: -5px;
         top: 50%;
         margin-top: -6px;
