--- a/public/assets/sass/framework/_accordion.scss
+++ b/public/assets/sass/framework/_accordion.scss
@@ -63,13 +63,13 @@
         }
       }
       i.icon,
-      ion-icon {
-        width: 24px;
-        font-size: 24px;
-        margin-right: 10px;
-        display: flex;
-        align-items: center;
-        justify-content: center;
+      material-icons {
+        width: 24px !important;
+        font-size: 24px !important;
+        margin-right: 10px !important;
+        display: flex !important;
+        align-items: center !important;
+        justify-content: center !important;
       }
     }
   }
