--- a/public/assets/sass/framework/_icon.scss
+++ b/public/assets/sass/framework/_icon.scss
@@ -1,4 +1,4 @@
-ion-icon {
+material-icons {
   --ionicon-stroke-width: 32px;
 }
 i.icon{
@@ -8,7 +8,6 @@ i.icon{
   font-size: 32px;
   color: $colorHeading;
 }
-
 .iconedbox{
   display: inline-flex;
   align-items: center;
